@@ -37,14 +37,28 @@
 .Op Fl -results-file Ar file
 .Op Fl -results-filter Ar types
 .Op Fl -verbose
+.Op Ar test_filter1 .. test_filterN
 .Sh DESCRIPTION
 The
 .Nm
-command generates a user-friendly, plain-text report designed to be
-consumed by the user from the terminal.  This report is not intended to be
-machine-parseable.  To do so, the command processes a results file and then
-creates a textual summary of the test case results
-recorded in that results file.
+command parses a results file and generates a user-friendly, plain-text
+report for user consumption on the terminal.  By default, these reports
+only display a summary of the execution of the full test suite to highlight
+where problems may lie.
+.Pp
+The output of
+.Nm
+can be customized to display full details on all executed test cases.
+Additionally, the optional arguments to
+.Nm
+are used to select which test programs or test cases to display.  These are
+filters and are explained in more detail in
+.Xr kyua-test-filters 7 .
+.Pp
+Reports generated by
+.Nm
+are
+.Em not intended to be machine-parseable .
 .Pp
 The following subcommand options are recognized:
 .Bl -tag -width XX
@@ -91,7 +105,9 @@ output of the test cases.
 .Sh EXIT STATUS
 The
 .Nm
-command always returns 0.
+command returns 0 if no filters were specified or if all filters match one
+or more test cases.  If any filter fails to match any test case, the
+command returns 1.
 .Pp
 Additional exit codes may be returned as described in
 .Xr kyua 1 .
