@@ -25,7 +25,7 @@
 .\" THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 .\" OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.Dd August 13, 2014
+.Dd September 21, 2014
 .Dt KYUA 1
 .Os
 .Sh NAME
@@ -155,7 +155,10 @@ The following commands are used to generate reports based on the data previously
 recorded in a results file:
 .Bl -tag -width reportXjunitXX -offset indent
 .It Ar report
-Generates a plain-text report.
+Generates a plain-text report.  Combined with its
+.Fl -verbose
+flag and the ability to only display specific test cases, this command can also
+be used to debug test failures post-facto on the console.
 See
 .Xr kyua-report 1 .
 .It Ar report-html
